fluxcd/cluster/production/gateway/alrimaal-frontend-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: alrimaal-route
  namespace: default
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "alrimaal.com"
  rules:
    - backendRefs:
        - name: alrimaal-frontend
          namespace: default
          port: 80
