fluxcd/cluster/production/gateway/argo-workflows-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: argo-workflows-route
  namespace: argo
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "workflows.alrimaal.com"
  rules:
    - backendRefs:
        - name: argo-workflows-server
          namespace: argo
          port: 80
