fluxcd/cluster/production/gateway/caas-backend-dev-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: caas-backend-route
  namespace: default
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "bunyaandev.alrimaal.com"
  rules:
    - backendRefs:
        - name: caas-backend
          namespace: default
          port: 80
