fluxcd/cluster/production/gateway/caas-frontend-dev-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: caas-frontend-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "bunyaanalpha1.alrimaal.com"
  rules:
    - backendRefs:
        - name: caas-frontend
          namespace: dev
          port: 80
