fluxcd/cluster/production/gateway/grafana-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "grafana.intern.alrimaal.com"
  rules:
    - backendRefs:
        - name: prometheus-stack-grafana
          namespace: monitoring
          port: 80
