fluxcd/cluster/production/gateway/http-redirect.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-to-https
  namespace: cilium-gateway
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: http
  hostnames:
    - grafana.intern.alrimaal.com
    - minio.intern.alrimaal.com
    - minio.alrimaal.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: "https"
            port: 443
            statusCode: 301
