fluxcd/cluster/production/gateway/http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: cilium-gateway
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: prometheus-stack-grafana
          namespace: monitoring
          port: 80
