fluxcd/cluster/production/gateway/minio-console-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: minio-console-route
  namespace: minio-tenant
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "minio.intern.alrimaal.com"
  rules:
    - backendRefs:
        - name: myminio-console
          namespace: minio-tenant
          port: 9090
