fluxcd/cluster/production/gateway/muzbuild-frontend-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: muzbuild-frontend-route
  namespace: default
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "kurdoos.app"
  rules:
    - backendRefs:
        - name: muzbuild-frontend
          namespace: default
          port: 80
