fluxcd/cluster/production/gateway/muzbuild-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: muzbuild-route
  namespace: default
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "api.kurdoos.app"
  rules:
    - backendRefs:
        - name: muzbuild
          namespace: default
          port: 80
