fluxcd/cluster/production/gateway/qirtaas-backend-dev-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: qirtaas-backend-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "qirtaasbackend.alrimaal.com"
  rules:
    - backendRefs:
        - name: qirtaas-backend
          namespace: dev
          port: 80
