fluxcd/cluster/production/gateway/qirtaas-backend-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: qirtaas-backend-route
  namespace: default
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "qirtaasbackend.alrimaal.com"
    - "api.qirtaas.io"
  rules:
    - backendRefs:
        - name: qirtaas-backend
          namespace: default
          port: 80
