fluxcd/cluster/production/gateway/qirtaas-frontend-dev-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: qirtaas-frontend-dev-route
  namespace: dev
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "qirtaasdev.alrimaal.com"
  rules:
    # Only redirect landing page
    - matches:
        - path:
            type: Exact
            value: /
      filters:
        - type: RequestRedirect
          requestRedirect:
            path:
              type: ReplaceFullPath
              replaceFullPath: /auth
            statusCode: 302

    # Everything else goes to frontend service normally
    - backendRefs:
        - name: qirtaas-frontend
          namespace: dev
          port: 80
