fluxcd/cluster/production/gateway/qirtaas-frontend-http.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: qirtaas-frontend-route
  namespace: default
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: https
  hostnames:
    - "qirtaas.io"
  rules:
    - backendRefs:
        - name: qirtaas-frontend
          namespace: default
          port: 80
