fluxcd/cluster/production/gateway/qirtaas-redirect-http.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: redirect-qirtaas
  namespace: cilium-gateway
spec:
  parentRefs:
    - name: default-gateway
      namespace: cilium-gateway
      sectionName: http
  hostnames:
    - qirtaas.alrimaal.com
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            hostname: qirtaas.io
            scheme: "https"
            statusCode: 301
